# xenios_ai_backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: health.py  router.py
app/api/v1/: analytics.py  chat.py  embeddings.py  extraction.py  insights.py  llm.py  router.py  status.py  transcription.py
app/core/: auth.py  database.py  logging.py  redis.py
app/middleware/: __init__.py  audit_log.py  auth_state.py  correlation.py  rate_limit.py
app/models/: __init__.py  analytics.py  rag.py
app/schemas/: __init__.py  analytics.py  common.py  extraction.py  health.py  llm.py  rag.py  transcription.py
app/services/analytics/: __init__.py  alerts.py  authorization.py  client_analytics.py  coaching_style.py  cue_detection.py  engagement.py  prompts.py  risk_scoring.py  sentiment.py  session_analytics.py  talk_time.py  trends.py
app/services/extraction/: __init__.py  base.py  inbody.py  lab_results.py  router.py  storage.py  validation.py
app/services/llm/: __init__.py  client.py  models.py  prompts.py
app/services/rag/: __init__.py  chat.py  embeddings.py  insights.py  openai_client.py  prompts.py  retrieval.py
app/services/transcription/: __init__.py  audio.py  deepgram.py  diarization.py  storage.py  summarization.py
app/workers/: __init__.py  celery_app.py
app/workers/tasks/: __init__.py  analytics.py  base.py  extraction.py  rag.py  transcription.py
codev/: projectlist.md
codev/plans/: 0001-ai-backend-foundation.md  0002-document-extraction-pipeline.md  0003-transcription-session-processing.md  0004-rag-chat-insights.md  0005-coaching-analytics-risk-detection.md  0006-multi-provider-llm.md  0007-multi-provider-extraction.md
codev/reviews/: 0001-ai-backend-foundation.md  0002-document-extraction-pipeline.md  0003-transcription-session-processing.md  0004-rag-chat-insights.md  0005-coaching-analytics-risk-detection.md  0006-multi-provider-llm.md  0007-multi-provider-extraction.md
codev/specs/: 0001-ai-backend-foundation.md  0002-document-extraction-pipeline.md  0003-transcription-session-processing.md  0004-rag-chat-insights.md  0005-coaching-analytics-risk-detection.md  0006-multi-provider-llm.md  0007-multi-provider-extraction.md
docker/: Dockerfile  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml
infrastructure/: ansible.cfg
infrastructure/ansible/: deploy.yml  inventory.ini  requirements.yml  teardown.yml
infrastructure/ansible/templates/: docker-compose.prod.yml.j2  env.j2
infrastructure/inventory/: hosts.yml
infrastructure/inventory/group_vars/: all.yml  production.yml  staging.yml
infrastructure/playbooks/: deploy.yml  provision.yml  rollback.yml
scripts/: init_db.sql
scripts/migrations/: 0002_extraction_tables.sql  0003_transcription_tables.sql  0004_rag_tables.sql  0005_analytics_tables.sql
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_extraction_api.py  test_extraction_base.py  test_health.py  test_lab_extractor.py  test_llm_models.py  test_llm_providers.py  test_transcription_api.py  test_transcription_services.py  test_wearable_normalizers.py
tests/api/v1/: test_chat.py  test_rate_limiting.py
tests/fixtures/: sample_apple_health.xml  sample_garmin.csv  sample_lab_results.csv  sample_whoop.csv
tests/middleware/: test_auth_state.py
tests/services/analytics/: test_coaching_style.py  test_engagement.py  test_risk_scoring.py  test_sentiment.py  test_talk_time.py  test_trends.py
tests/services/extraction/: test_providers.py
(+28 files in other folders)
