[project]
name = "xenios-ai-backend"
version = "0.1.0"
description = "AI Backend for Xenios coaching platform"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.0",
    "flower>=2.0.0",
    # Document extraction (Spec 0002)
    "docling>=2.0.0",
    "pandas>=2.0.0",
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    "python-magic>=0.4.27",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
    # Transcription (Spec 0003)
    "deepgram-sdk>=3.0.0,<4.0.0",
    "ffmpeg-python>=0.2.0",
    # RAG System (Spec 0004)
    "pgvector>=0.2.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    # Multi-Provider LLM Support (Spec 0006)
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
